fix alignment of dream bubbles

--- a/css/index.css
+++ b/css/index.css
@@ -256,7 +256,7 @@ path:hover {
 }
 .container .firstcontent {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   font-family: "Acme", sans-serif;
   justify-content: flex-start;
   font-size: 1.6rem;
@@ -268,21 +268,6 @@ path:hover {
   align-items: flex-start;
 }
 .container .firstcontent .text {
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  align-content: space-around;
-  width: 22%;
-  padding-left: 2rem;
-}
-.container .secondcontent {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.container .secondcontent .bubble {
   height: 100%;
   display: flex;
   flex-wrap: wrap;
