--- a/less/home-page.less
+++ b/less/home-page.less
@@ -30,7 +30,7 @@ path:hover {
 
   .firstcontent {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     font-family: "Acme", sans-serif;
     justify-content: flex-start;
     // align-content: center;
@@ -52,19 +52,19 @@ path:hover {
     }
   }
 
-  .secondcontent {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    .bubble {
-      height: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      align-content: space-around;
-      width: 22%;
-      padding-left: 2rem;
-    }
-  }
+  // .secondcontent {
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: center;
+  //   align-items: center;
+  //   .bubble {
+  //     height: 100%;
+  //     display: flex;
+  //     flex-wrap: wrap;
+  //     align-items: center;
+  //     align-content: space-around;
+  //     width: 22%;
+  //     padding-left: 2rem;
+  //   }
+  // }
 }
